--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.0.10",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
