--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,19 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "24"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-admin": "^12.2.0",
+    "firebase-functions": "^5.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.4.1"
+    "firebase-functions-test": "^3.3.0",
+    "globals": "^15.6.0"
   },
   "private": true
 }
