sửa lại file apphosting.yaml để có thể sửa vấn đề khi deploy lên app hos

--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,16 @@
         "*.local"
       ]
     }
-  ]
+  ],
+  "apphosting": {
+    "backendId": "studio",
+    "rootDir": "/",
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log",
+      "functions"
+    ]
+  }
 }
