--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-day-picker": "^9.0.4",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^10.0.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
