--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.8.0",
-    "@genkit-ai/next": "^1.8.0",
+    "@genkit-ai/firebase": "^1.27.0",
+    "@genkit-ai/googleai": "^1.27.0",
+    "@genkit-ai/next": "^1.27.0",
     "@hookform/resolvers": "^4.1.3",
     "@pinecone-database/pinecone": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -41,7 +42,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
-    "genkit": "^1.8.0",
+    "genkit": "^1.27.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.8",
     "patch-package": "^8.0.0",
