--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -14,10 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@genkit-ai/googleai": "^1.27.0",
+    "@genkit-ai/google-genai": "^1.0.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.2",
-    "genkit": "^1.27.0"
+    "genkit": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
