--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "firebase": "^11.8.1",
     "genkit": "^1.27.0",
     "lucide-react": "^0.475.0",
-    "next": "15.3.8",
+    "mermaid": "^11.12.2",
+    "next": "15.5.9",
     "patch-package": "^8.0.0",
     "react": "^19.2.3",
     "react-day-picker": "^9.0.4",
