--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "@genkit-ai/googleai": "^1.27.0",
+    "@google/generative-ai": "^0.15.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.2",
     "genkit": "^1.27.0"
