--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@genkit-ai/firebase": "^1.27.0",
     "@genkit-ai/googleai": "^1.27.0",
     "@genkit-ai/next": "^1.27.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@pinecone-database/pinecone": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
