--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "@google/generative-ai": "^0.24.1",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.2",
+    "flexsearch": "^0.8.212",
     "genkit": "^1.27.0"
   },
   "devDependencies": {
@@ -29,3 +30,5 @@
   },
   "private": true
 }
+
+    
