--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.2",
     "flexsearch": "^0.8.212",
-    "genkit": "^1.27.0"
+    "genkit": "^1.27.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
@@ -30,5 +31,3 @@
   },
   "private": true
 }
-
-    
