Cải tiến function chatbot còn function khác giữ nguyên giúp mình với

--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "firebase-functions": "^7.0.2",
     "flexsearch": "^0.8.212",
     "genkit": "^1.27.0",
+    "mammoth": "^1.7.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
