--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,17 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "^22"
+    "node": "22"
   },
   "main": "index.js",
   "dependencies": {
     "@genkit-ai/googleai": "^1.27.0",
     "@google/generative-ai": "^0.24.1",
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.2",
+    "firebase-functions": "^7.0.5",
     "flexsearch": "^0.8.212",
     "genkit": "^1.27.0",
-    "mammoth": "^1.7.2",
+    "mammoth": "^1.11.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
