--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@genkit-ai/next": "^1.27.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^16.1.6",
     "@pinecone-database/pinecone": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
